2015-08-13  Richard Biener  <rguenther@suse.de>

PR tree-optimization/67191
	* tree-ssa-sccvn.c (sccvn_dom_walker::before_dom_children): Remove
	assert we value-numbered last stmts operand because it can validly
	trigger for unreachable code.

	* gcc.dg/torture/pr67191.c: New testcase.
	* g++.dg/torture/pr67191.C: Likewise.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@226854 138bc75d-0d04-0410-961f-82ee72b054a4